fix primary-nav alignment

--- a/styleguide/source/assets/scss/02-molecules/_primary-nav.scss
+++ b/styleguide/source/assets/scss/02-molecules/_primary-nav.scss
@@ -53,6 +53,13 @@
       border-bottom: 0;
     }
     
+    &:last-child {
+      a:link,
+      a:visited {
+        padding-right: 0;
+      }
+    }
+    
     .joe__sticky-header & {
       
       a:link,
